--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # This will be the first part of the title tag for your site <title> site.name + page.title </title>
 name: "JKL"
 # Populates the meta description for the site. Should be under 150 characters for best SEO purposes.
-descripiton: "Light-weight scaffolding for a Jekyll project"
+descripiton: "Light-weight theme for a basic Jekyll project"
 
 # Owner (organization or individual) of site content
 author: "mrmrs"
 
 #url: "[http:// ]"
-url: "http://localhost:4000"
+url: "http://jk-l.cc"
 
   # Your UA tracking number (i.e 35858753-1) for Google Analytics. 
   # If you comment this out, or don't fill out this parameter - Google analytics won't be included. 
