--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ author: "mrmrs"
 #url: "[http:// ]"
 url: "http://jk-l.cc"
 
-  # Your UA tracking number (i.e 35858753-1) for Google Analytics. 
-  # If you comment this out, or don't fill out this parameter - Google analytics won't be included. 
-googleID: 
+# Your UA tracking number (i.e 35858753-1) for Google Analytics. 
+# If you comment this out, or don't fill out this parameter - Google analytics won't be included. 
+#googleID: 
 
 # Pagination variable for how many posts to show in a list
 paginate: 5
