Support jekyll >= 1.0 in dev rake task and config file

--- a/_config.yml
+++ b/_config.yml
@@ -35,4 +35,4 @@ flickr: ""
 # UnComment once you have pygments installed. Used for code syntax highlighting.
 #pygments: true
 
-exclude: Rakefile
+exclude: [Rakefile]
