--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,18 @@
+#
+# Site config for a jekyll project
+#
+
 # This will be the first part of the title tag for your site <title> site.name + page.title </title>
 name: "JKL"
+
 # Populates the meta description for the site. Should be under 150 characters for best SEO purposes.
 descripiton: "Light-weight scaffolding for a Jekyll project"
 
 # Owner (organization or individual) of site content
 author: "mrmrs"
 
-#url: "[http:// ]"
+#url: URL for relative path type stuff. Change this before deploying. 
+# url : "http://YOURDOMAIN.COM
 url: "http://localhost:4000"
 
 # Your UA tracking number (i.e 35858753-1) for Google Analytics. 
@@ -25,6 +31,7 @@ permalink: pretty
 # /blog/:yearr/:month/:day/:title                 => /blog/2009/04/29/slap-chop/index.html
 
 # UnComment once you have pygments installed. Used for code syntax highlighting.
-#pygments: true
+# pygments: true
 
+# Add anything here you don't want copied to _site. By default anything with a leading underscore won't be copied over.
 exclude: [Rakefile]
